# B-station-crawler

./: .gitignore  README.md  STOP_FIX_SUMMARY.md  cleanup.bat  cleanup.ps1  clear_db.py  data.sqlite  init_db.py  pyproject.toml  requirements.txt  run_web.bat  stop_web.bat  stop_web.ps1
config/: keywords.txt
output/: results.json
scripts/: cleanup.py  inspect_db.py  register_weekly_task.ps1
src/bili_scraper/: __init__.py  crawler.py  keywords.py  persist.py  run.py  search.py  service.py  utils.py  web.py
src/bili_scraper.egg-info/: PKG-INFO  SOURCES.txt
src/bili_scraper/templates/: index.html
