[build-system]
requires = ["setuptools>=61.0","setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bili_scraper"
version = "0.1.0"
description = "Async Bilibili weekly scraper"
authors = [ { name = "User" } ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
